[package]
name = "partner"
version = "0.1.0"
authors = ["yinyanlv <yanlv.yin@gmail.com>"]

[dependencies]
actix = "^0.5.7"
actix-web = "^0.6.10"
diesel = { version = "^1.3.0", features = ["mysql"]}  # windows下，安装diesel_cli时，需安装mysql Connector/C，并配置系统环境变量：MYSQLCLIENT_LIB_DIR = C:\Program Files\MySQL\MySQL Connector C 6.1\lib\vs14，即mysqlclient.lib所在的目录
dotenv = "^0.13.0"