 [package]
name = "partner"
version = "0.1.0"
authors = ["yinyanlv <yanlv.yin@gmail.com>"]

[dependencies]
actix = "^0.7.1"
actix-web = "^0.7.1"
actix-redis = "^0.5.0"
redis-async = "0.3.2"
futures = "0.1"
cookie = "^0.10.1"
serde = "^1.0.66"
serde_derive = "^1.0.66"
serde_json = "^1.0.19"
diesel = {version = "^1.3.0", features = ["mysql", "chrono", "serde_json", "r2d2"]}  # windows下，安装diesel_cli时，需安装mysql Connector/C，并配置系统环境变量：MYSQLCLIENT_LIB_DIR = C:\Program Files\MySQL\MySQL Connector C 6.1\lib\vs14，即mysqlclient.lib所在的目录
dotenv = "^0.13.0"
env_logger = "^0.5.10"
lazy_static = "^1.0.1"
chrono = {version = "^0.4.2", features = ["serde"]}
rand = "^0.5.1"
rust-crypto = "^0.2.36"
toml = "^0.4.6"
meval = {version = "^0.1.0", features = ["serde"]}
log4rs = "^0.8.0"